--- a/Group_Assignment/Group_Assignment.ipynb
+++ b/Group_Assignment/Group_Assignment.ipynb
@@ -9,7 +9,7 @@
     "## Group 4\n",
     "### Group Members\n",
     "- Aaron Hanna; A15683824\n",
-    "-\n",
+    "- Raymond Urbina; A16099845\n",
     "-\n"
    ]
   },
@@ -334,6 +334,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.5"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
